--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dbd/nextjs-lambda",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "DBD fork of @sladg/nextjs-lambda.",
   "license": "MIT",
   "exports": "./dist/index.js",
@@ -23,7 +23,7 @@
     "copy:files": "cp -R ./lib/templates ./dist/templates"
   },
   "dependencies": {
-    "@sladg/imaginex-lambda": "0.17.0"
+    "@dbd/imaginex-lambda": "dbdventures/imaginex-lambda"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
