--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "aws-cdk": "^2.110.0",
     "aws-cdk-lib": "^2.110.0",
     "envalid": "^7.3.1",
-    "next": "^12.2 || ^13"
+    "next": "^12.2 || ^13 || ^14"
   },
   "engines": {
     "node": ">=16.15"
